--- a/package.json
+++ b/package.json
@@ -13,12 +13,10 @@
     "lint:html": "markuplint \"src/**/*.astro\"",
     "format": "prettier ./src --write --ignore-path .gitignore",
     "commitmsg": "commitlint --edit ${1}",
-    "prepare": "husky install",
     "check-types": "tsc --project tsconfig.json --pretty --noEmit",
     "validate": "npm run check-types && lint-staged --no-stash"
   },
   "dependencies": {
-    "@astrojs/mdx": "^1.1.2",
     "@astrojs/sitemap": "^1.2.2",
     "astro": "^2.10.15",
     "micromodal": "^0.4.10",
@@ -36,6 +34,7 @@
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "astro-compress": "^2.0.4",
+    "dayjs": "^1.11.10",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-astro": "^0.21.1",
